# Wiktionalyser

./: .gitmodules  README.md
analyser/: Analyser.cpp  Analyser.h  AnalyserTest.cpp  CMakeLists.txt  Definition.h  DerivedTerms.cpp  DerivedTerms.h  Etymology.cpp  Etymology.h  GenericPayload.cpp  GenericPayload.h  Hyponyms.cpp  Hyponyms.h  Language.cpp  Language.h  Node.cpp  Node.h  Pos.h  Pronunciation.cpp  Pronunciation.h  Sense.cpp  Sense.h  Synonyms.cpp  Synonyms.h  Template.h  Translations.cpp  Translations.h
dumps/: book.page  get.sh  getall.sh
tools/: CMakeLists.txt  DividerTest.cpp  PickerTest.cpp  WikiDivider.cpp  WikiDivider.h  WikiPicker.cpp  WikiPicker.h
